--- a/css/style.css
+++ b/css/style.css
@@ -159,44 +159,11 @@ header a {
 
 /* Información-start */
 
-.section__inf{
-    text-align: center;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.section__img__inf{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
-}
-
-.img__inf{
-    width: 80%;
-    max-width: 350px;
-    border-radius: 5px;
-    margin: 5px;
-    box-shadow: 0 6px 5px rgba(26, 25, 25, 0.589);
-}
-
-.section__inf{
-    margin-bottom: 25px;
-}
-
-.title__inf{
-    font-size: 35px;
-    font-weight: bold;
-    margin: 25px 0;
-}
-.text__inf{
-    font-size: 18px;
-    font-weight: 500;
-    line-height: 1.3;
-    max-width: 450px;
-    margin: 25px auto;
-}
 /* Información-end */
+
+/* Redes-start */
+
+/* Redes-end */
 
 /* Footer-start */
 .pie-pagina{
